# python-eemi

./: .gitignore  README.md  api.db  main.py  pyproject.toml
src/config/: db.py
src/controllers/: export_controller.py  home_controller.py  student_controller.py  test_controller.py  user_controller.py
src/controllers/models/: grade.py  student.py
src/models/: grade.py  student.py  user.py
src/services/: home_service.py  student_service.py  user_service.py
src/tests/: test_basic.py  test_export.py  test_students.py
